Anticipating possible errors and styling the page

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,17 @@
 
 <head>
     <title>{% block title %}{% endblock %}</title>
+
+
+    <meta charset="UTF-8">
+    <meta name="description" content="FinBotIncome">
+    <meta name="keywords" content="finbotincome, traid, traider">
+    <meta name="author" content="rzacrw">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% load static %}    
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
+
 </head>
 
 <body>
